mm: Disable PPR
Accordingly to FPS tests
(http://perf.mot.com/apps/fps/rungraphs/?runids=44588,44602,44598),
overall device performance has been improved when PPR is disabled (mainly
considering Major Page Fault and Swap IO improvements).

This gerrit disables PPR for Berlin NA device.

Change-Id: I89dade542cf47c754787fd17c11cc90e61d34473
Reviewed-on: https://gerrit.mot.com/2112482
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Fernanda Schmidt <fschmidt@motorola.com>
Reviewed-by: Rafael Ortolan <rafones@motorola.com>
Reviewed-by: Carlos Pinho <cpinho@motorola.com>
Submit-Approved: Jira Key

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -857,7 +857,7 @@ config PROCESS_RECLAIM
 	bool "Enable process reclaim"
 	depends on PROC_FS
 	depends on QGKI
-	default y
+	default n
 	help
 	 It allows to reclaim pages of the process by /proc/pid/reclaim.
 
