drivers/nfc: Import changes from OnePlus Nord CE 3 Lite 5G
- missed on treewide imports

Change-Id: Icd2b93416e3083fd7c0dea4d1fce0742ad2ecd0a

--- a/drivers/soc/oplus/system/Kconfig
+++ b/drivers/soc/oplus/system/Kconfig
@@ -20,7 +20,7 @@ config OPLUS_COMMON_SOFT
 	id.
 
 config OPLUS_DEVICE_IFNO
-  tristate "config devinfo"
+  bool "config devinfo"
   select OPLUS_ARCH_FILE
   help
 	define this config to compile devinfo.c for device register
