--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -205,6 +205,10 @@ source "drivers/input/rmi4/Kconfig"
 source "drivers/input/oplus_fp_drivers/Kconfig"
 #endif /* OPLUS_FEATURE_FINGERPRINT */
 
+#ifdef OPLUS_FEATURE_UFF_FINGERPRINT
+source "drivers/input/uff_fp_drivers/Kconfig"
+#endif /* OPLUS_FEATURE_UFF_FINGERPRINT */
+
 endif
 
 menu "Hardware I/O ports"
