--- a/drivers/input/Makefile
+++ b/drivers/input/Makefile
@@ -32,4 +32,8 @@ obj-$(CONFIG_RMI4_CORE)		+= rmi4/
 
 #ifdef OPLUS_FEATURE_FINGERPRINT
 obj-$(CONFIG_OPLUS_FINGERPRINT)  += oplus_fp_drivers/
-#endif /* OPLUS_FEATURE_FINGERPRINT */
+#endif /* OPLUS_FEATURE_FINGERPRINT *
+
+#ifdef OPLUS_FEATURE_UFF_FINGERPRINT
+obj-$(CONFIG_UFF_FINGERPRINT)  += uff_fp_drivers/
+#endif /*OPLUS_FEATURE_UFF_FINGERPRINT*/
