drivers/input: oplus_fp_drivers: Update from RMX3661_14.0.0.300(EX01)
Change-Id: I0989592f416573a7051535b9e3e4563047a09fb3

--- a/drivers/input/oplus_fp_drivers/Kconfig
+++ b/drivers/input/oplus_fp_drivers/Kconfig
@@ -4,12 +4,11 @@ menuconfig OPLUS_FINGERPRINT
 	help
 	  Say Y here to enable OPLUS fingerprint support
 
-if OPLUS_FINGERPRINT
-### fingerprint common config
-config OPLUS_FINGERPRINT_COMMON
+config OPLUS_FINGERPRINT_GKI_DISABLE
        default n
-       tristate "Fingerprint common"
+       tristate "Fingerprint enable gki"
 
+if OPLUS_FINGERPRINT
 ### platform config
 config OPLUS_FINGERPRINT_QCOM
        default n
