Revert "drivers/input: oplus_fp_drivers: Update from RMX3661_14.0.0.300(EX01)"
This reverts commit 067ac506c49631d0577727311b023da06276ecd2.

--- a/drivers/input/oplus_fp_drivers/Kconfig
+++ b/drivers/input/oplus_fp_drivers/Kconfig
@@ -4,11 +4,12 @@ menuconfig OPLUS_FINGERPRINT
 	help
 	  Say Y here to enable OPLUS fingerprint support
 
-config OPLUS_FINGERPRINT_GKI_DISABLE
-       default n
-       tristate "Fingerprint enable gki"
-
 if OPLUS_FINGERPRINT
+### fingerprint common config
+config OPLUS_FINGERPRINT_COMMON
+       default n
+       tristate "Fingerprint common"
+
 ### platform config
 config OPLUS_FINGERPRINT_QCOM
        default n
