--- a/techpack/audio/config/holiauto.conf
+++ b/techpack/audio/config/holiauto.conf
@@ -40,4 +40,5 @@ export CONFIG_AUXPCM_DISABLE=y
 export CONFIG_DIGITAL_CDC_RSC_MGR=y
 #ifdef OPLUS_ARCH_EXTENDS
 export CONFIG_SND_SOC_SIA81XX=y
+export CONFIG_SND_SOC_OPLUS_PA_MANAGER=y
 #endif
